<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vdinh037.androidlabs.WeatherForecast">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherImage"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:contentDescription="@string/weatherImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTemp"
        android:id="@+id/currentTemp"
        android:layout_alignTop="@+id/weatherImage"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/weatherImage"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxTemp"
        android:id="@+id/maxTemp"
        android:layout_toEndOf="@+id/weatherImage"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/currentTemp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minTemp"
        android:id="@+id/minTemp"
        android:layout_below="@+id/maxTemp"
        android:layout_toEndOf="@+id/weatherImage"
        android:layout_alignParentEnd="true"
        android:paddingBottom="10dp" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

</RelativeLayout>


