<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.vdinh037.androidlabs.ListItemsActivity">


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:columnWeight="1"
        android:gravity="fill"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/RadioButton"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWeight="1"
        android:gravity="fill"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/CheckBox" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWeight="1"
        android:gravity="fill"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/Switch" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:columnWeight="1"
        android:gravity="fill"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>
